Add more modal types. Some refactoring.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 
         let text = 'lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod. lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.';
 
-        modal.create({
-            title: 'foo',
-            body: text, 
+        modal.show({
+            body: text,
             type: 'error'
         });
     </script>
